# uc-healthcare-agent

./: .env  commands.bash  healthcare.json  healthcare2.json  modulenlp.py  parlant.toml  pyproject.toml
data/: doctors.json  patients.json
helpers/: date.py  general.py
modules/: doctors.py  patients.py  tests.py
modules/appointments/: _canceling.py  _constants.py  _rescheduling.py  canceling.py  general.py  main.py  module.py  rescheduling.py  scheduling.py  tests.py
modules/flows/: healthcare_flow1.py
modules/prescriptions/: general.py  module.py
modules/tester/: module.py
parlant-data/: agents.json  chroma.sqlite3  context_variables.json  customers.json  evaluations.json  fragments.json  glossary_tags.json  guideline_tool_associations.json  guidelines.json  journeys.json  relationships.json  services.json  sessions.json  tags.json  utterances.json
store/db/backup/: doctors.json  patients.json
store/db/scheduling/: doctors.json  patients.json
utils/: date_utils.py  doctors_utils.py  json_utils.py
utterances/: appointment_utterances.json  tester.json
