[tool.poetry]
name = "healthcare-parlant"
version = "0.1.0"
description = ""
authors = ["yannemcie <yann@emcie.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
mypy = "1.15.0"
onnxruntime = "1.21.1"

parlant = { git = "https://github.com/emcie-co/parlant", branch = "develop" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
